# cpp2-machiavelli

./: .clang-format  CMakeLists.txt  Machiavelli.sln  readme.txt  todos.txt
app/app/: CMakeLists.txt
app/app/include/mach/app/events/: clientconnectedevent.h
app/app/include/mach/app/models/: clientinfo.h
app/client/: CMakeLists.txt
app/client/include/mach/app/: client.h  clientconfiguration.h  multiplayerclient.h  onlineclient.h  onlineclientconfiguration.h
app/client/src/mach/app/: client.cpp  multiplayerclient.cpp  onlineclient.cpp
app/common/: CMakeLists.txt
app/common/include/mach/app/: commandtype.h  commandvisitor.h  constants.h  eventtype.h  eventvisitor.h
app/common/include/mach/app/commands/: buildbuildingcommand.h  chooseCharacterCommand.h  choosecommand.h  command.h  commandbase.h  endturncommand.h  getcardcommand.h  getgoldcommand.h  joingamecommand.h  usecharacterpowercommand.h
app/common/include/mach/app/events/: clientconnectedevent.h  event.h  eventbase.h
app/common/include/mach/app/models/: clientinfo.h
app/server/: CMakeLists.txt
app/server/include/mach/app/: server.h  serverclient.h  serverconfiguration.h
app/server/include/mach/app/events/: clientconnectedevent.h
app/server/src/mach/app/: server.cpp  serverclient.cpp
dal/common/: CMakeLists.txt
dal/common/include/mach/dal/: buildingcardrepository.h  charactercardrepository.h
dal/common/include/mach/dal/models/: buildingcard.h  buildingcolor.h  charactercard.h
dal/common/src/mach/dal/: buildingcardrepository.cpp  charactercardrepository.cpp
domain/common/: CMakeLists.txt
domain/common/include/mach/domain/: characterpowerhelper.h  eventtype.h  eventvisitor.h  gamecontroller.h  gamestate.h
domain/common/include/mach/domain/controllers/: gamecontroller.h
domain/common/include/mach/domain/events/: cardchoicenecessaryevent.h  characterchosenevent.h  choicenecessaryevent.h  clientconnectedevent.h  event.h  eventbase.h  gameendedevent.h  gamestartedevent.h  gameupdatedevent.h  illegalactionevent.h  intchoicenecessaryevent.h  nextroundevent.h  nextturnevent.h  serverdisconnectedevent.h
domain/common/include/mach/domain/models/: buildingcard.h  buildingcolor.h  charactercard.h  clientinfo.h  game.h  player.h
domain/common/src/mach/domain/: characterpowerhelper.cpp  gamecontroller.cpp
domain/common/src/mach/domain/controllers/: gamecontroller.cpp
domain/common/src/mach/domain/models/: buildingcard.cpp  charactercard.cpp  game.cpp  player.cpp
infra/common/: CMakeLists.txt
infra/common/include/mach/infra/: abstractfactory.h  clicommand.h  clicommandparser.h  concurrentqueue.h  csvparser.h  functionalerror.h  functionalerrorcategory.h  noncopyable.h  observable.h  serializable.h  serializer.h  socket.h  socketerror.h  socketerrorcategory.h  sockets.h  subject.h  tcpclient.h  tcpserver.h  thing.h  threadpool.h
infra/common/src/mach/infra/: csvparser.cpp  functionalerrorcategory.cpp  socket.cpp  socketerrorcategory.cpp  sockets.cpp  subject.cpp  tcpclient.cpp  tcpserver.cpp  threadpool.cpp
infra/infra/: CMakeLists.txt
infra/infra/include/mach/infra/: abstractfactory.h  clicommand.h  clicommandparser.h  command.h  commandmediator.h  concurrentautoincrement.h  concurrentqueue.h  functionalerror.h  functionalerrorcategory.h  noncopyable.h  observable.h  sockets.h  subject.h  tcpclient.h  tcpserver.h  tcpserverclient.h  threadpool.h  wsainitializer.h
infra/infra/src/mach/infra/: clicommandparser.cpp  command.cpp  commandmediator.cpp  functionalerrorcategory.cpp  sockets.cpp  subject.cpp  tcpclient.cpp  tcpserver.cpp  tcpserverclient.cpp  threadpool.cpp  wsainitializer.cpp
view/clientcli/: CMakeLists.txt
view/clientcli/src/: main.cpp
view/clientcli/src/mach/view/: clientcli.cpp  clientcli.h  clientclistate.h  init.cpp  technicalerrorcategory.cpp  technicalerrorcategory.h
view/clientcli/src/mach/view/statehandlers/: choosecharacter.h  choosingcharacters.cpp  choosingcharacters.h  connecttoserver.cpp  connecttoserver.h  ended.cpp  ended.h  playinground.cpp  playinground.h  statehandler.h  statehandlerbase.h  waitforgametostart.cpp  waitforgametostart.h
view/common/: CMakeLists.txt
view/common/include/mach/view/: console.h  helpers.h
view/common/src/mach/view/: console.cpp  helpers.cpp
view/servercli/: CMakeLists.txt
view/servercli/src/: main.cpp
view/servercli/src/mach/view/: init.cpp  servercli.cpp  servercli.h  serverclistate.h  serverstate.h  technicalerror.h
view/servercli/src/mach/view/statehandlers/: configureserver.cpp  configureserver.h  servernotstarted.h  serverrunning.cpp  serverrunning.h  statehandler.h  statehandlerbase.h
